# uibench-wasm-bindgen

./: .gitignore  Cargo.toml  Makefile  index.js  lib.rs  package.json  webpack.config.js
docs/clone/: index.html  index.js
docs/inner/: 1.index.js
docs/inner-html/: index.js
docs/uibench_wasm_bindgen_clone/: 1.index.js  index.html  index.js
docs/uibench_wasm_bindgen_inner_html/: index.html  index.js
uibench_sys/: Cargo.toml
uibench_sys/src/: lib.rs
uibench_wasm_bindgen_clone/: Cargo.toml
uibench_wasm_bindgen_clone/src/: lib.rs
uibench_wasm_bindgen_clone/static/: index.html
uibench_wasm_bindgen_inner_html/: Cargo.toml
uibench_wasm_bindgen_inner_html/src/: lib.rs
