[package]
name = "uibench"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
