[package]
name = "uibench"
version = "0.1.0"
edition = "2018"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
js-sys = "0.3"
serde = "^1.0"
serde_derive = "^1.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
]

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
