[package]
name = "uibench_wasm_bindgen_clone"
version = "0.1.0"
edition = "2018"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
uibench_sys = { path = "../uibench_sys" }
lazy_static = "1.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'DocumentFragment',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlTemplateElement',
  'Node',
  'NodeList',
  'Window',
]
