[package]
name = "uibench_wasm_bindgen_inner_html"
version = "0.1.0"
edition = "2018"
authors = ["Liam Curry <liam@sagan.software>"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
uibench_sys = { path = "../uibench_sys" }

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
]
